Update devcontainer.json: add shell arguments for automatic Oh My Zsh installation

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,8 @@
 					"zsh": {
 						"path": "/bin/zsh"
 					}
-				}
+				},
+				"terminal.integrated.shellArgs.linux": ["-c", "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"]
 			}
 		}
 	}
